SETUP/tmp/iptables.conf
# originally generated by iptables-save
# modifications for basic networking protection while maintaining typical access avenues
*filter
:INPUT DROP [4:180]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 127.0.0.0/8 -j DROP
-A INPUT -p tcp -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p udp -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m state --state ESTABLISHED -j ACCEPT
#
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m state --state NEW,ESTABLISHED -j ACCEPT
#
# Open SSH Port (22)
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
#
# EXAMPLES
#
# Open HTTP Port (80)
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
# Open HTTPS Port (443)
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
# Open DB2 Port (50000)
-A INPUT -p tcp -m tcp --dport 50000 -j ACCEPT
#
COMMIT
